[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-v --tb=short"

[tool.bandit]
targets = ["src"]

[build-system]
requires      = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name            = "myhub-pipeline"
version         = "1.2.0"
requires-python = ">=3.11"
